src/components/GoUpButton/GoUpButton.module.css
.goUpButton {
  display: flex;
  position: fixed;
  right: 1rem;
  bottom: 1rem;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  box-shadow:
    rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
  border-radius: 1.5rem;
  background-color: var(--bg-color);
  padding: 0;
  aspect-ratio: 1 / 1.5;
  width: 3rem;
  & button {
    zoom: 3;
  }
}

